--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -10,5 +10,9 @@
     <param name="android-package" value="com.cyph.cordova.Chooser"/>
   </feature>
 
+  <feature name="CordovaPluginsCleartext">
+    <param name="android-package" value="cordova.plugins.cleartext"/>
+  </feature>
+
   
 </widget>
